# bangr

./: .gitignore  .oci  CMakeLists.txt  LICENSE  README.md  TODO.md  build.sh
docker-qt/: Dockerfile  link-to-sys.sh  relink.sh  xcb_deps.txt
docker-qt/qt-libs/: libQt6Concurrent.prl  libQt6Concurrent.so.6  libQt6Concurrent.so.6.7.2  libQt6Core.prl  libQt6Core.so.6  libQt6DBus.prl  libQt6DBus.so.6  libQt6DBus.so.6.7.2  libQt6Designer.prl  libQt6Designer.so.6  libQt6DesignerComponents.prl  libQt6DesignerComponents.so.6  libQt6DeviceDiscoverySupport.prl  libQt6EglFSDeviceIntegration.prl  libQt6EglFSDeviceIntegration.so.6  libQt6EglFSDeviceIntegration.so.6.7.2  libQt6EglFsKmsGbmSupport.prl  libQt6EglFsKmsGbmSupport.so.6  libQt6EglFsKmsGbmSupport.so.6.7.2  libQt6EglFsKmsSupport.prl  libQt6EglFsKmsSupport.so.6  libQt6EglFsKmsSupport.so.6.7.2  libQt6FbSupport.prl  libQt6Gui.prl  libQt6Gui.so.6  libQt6Help.prl  libQt6Help.so.6  libQt6Help.so.6.7.2  libQt6InputSupport.prl  libQt6JsonRpc.prl  libQt6JsonRpc.so.6  (+178 more)
plugin/: __init__.py  plugin.json  test_of_path_gen.py
src/: bangr.cpp  blockAnalyze.cpp  blockAnalyze.h  functionAnalyze.cpp  functionAnalyze.h
ssa_ops/: analyze.py  block_analyze.py  list.txt  mlil_op_map.py  notes.txt  process.py  ssa_ops_arr.py
test_bins/: Makefile  compute_address  compute_address.c  negation  negation.c  num.c  simple.c  split_var  split_var.c  split_var_64_bits  split_var_64_bits.c  struct_test  struct_test.c
test_scripts/: .get_ssa_per_block.py.swp  get_ssa_per_block.py  get_zx_q_ssa_var.py  test  test.c
ui/: __init__.py  plugin.json  variable_list.py
(+574 files in other folders)
